@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9923';
+our $VERSION='0.9924';
 
 
 use 5.005;
